--- a/Team930Scouting/WEARs/src/main/res/layout/activity_pre_match.xml
+++ b/Team930Scouting/WEARs/src/main/res/layout/activity_pre_match.xml
@@ -20,6 +20,38 @@
         app:srcCompat="@drawable/team_logo_glitch" />
 
     <org.team930.bears.wears.TextboxView
+        android:id="@+id/pScouter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:hint="Scouter Name"
+        app:label_location="none"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/teamMapView" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/teamMapView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:padding="5dp"
+        app:layout_constraintBottom_toTopOf="@id/teamNum"
+        android:background="@drawable/rounded_corners_chunk_material">
+
+        <ImageView
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/teamMapView" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <org.team930.bears.wears.TextboxView
         android:id="@+id/teamNum"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -49,22 +81,34 @@
         app:label="Starting Position"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/map" />
+        app:layout_constraintBottom_toTopOf="@+id/scouterMapView" />
 
-    <ImageView
-        android:id="@+id/map"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/scouterMapView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="6dp"
-        android:layout_marginTop="6dp"
-        android:adjustViewBounds="true"
-        android:scaleType="fitStart"
-        app:layout_constraintBottom_toTopOf="@+id/pNextContainer"
+        android:layout_margin="2dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/rounded_corners_chunk_material"
+        android:padding="5dp"
+        app:layout_constraintBottom_toTopOf="@id/pNextContainer"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="ContentDescription" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:src="@drawable/starting_pos"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/scouterMapView" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
