--- a/Team930Scouting/WEARs/src/main/res/layout/activity_settings.xml
+++ b/Team930Scouting/WEARs/src/main/res/layout/activity_settings.xml
@@ -98,7 +98,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/buttonLabelView"
+            app:layout_constraintStart_toEndOf="@+id/deleteLabelView"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="HardcodedText" />
     </androidx.constraintlayout.widget.ConstraintLayout>
