--- a/Team930Scouting/WEARs/src/main/res/layout/side_textbox_view.xml
+++ b/Team930Scouting/WEARs/src/main/res/layout/side_textbox_view.xml
@@ -36,6 +36,7 @@
         android:inputType="text"
         android:text=""
         android:textSize="18sp"
+        android:digits="0123456789*qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM.?! "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textboxSideLabelView"
