--- a/Team930Scouting/WEARs/src/main/res/layout/top_textbox_view.xml
+++ b/Team930Scouting/WEARs/src/main/res/layout/top_textbox_view.xml
@@ -33,6 +33,7 @@
         android:inputType="text"
         android:text=""
         android:textSize="18sp"
+        android:digits="0123456789*qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM.?! "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
