--- a/Team930Scouting/yaboiinthepits/src/main/res/values/colors.xml
+++ b/Team930Scouting/yaboiinthepits/src/main/res/values/colors.xml
@@ -1,6 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <color name="colorBase">#1D57A5</color>
+    <color name="colorAccentOne">#4698CA</color>
+    <color name="colorAccentTwo">#FBDB65</color>
+    <color name="colorAccentThree">#4298B5</color>
+    <color name="colorDarkBlue">#071D49</color>
+    <color name="colorRoyalBlue">#1E22AA</color>
+    <color name="colorBlack">#101820</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBackground">#d6d6d6</color>
+    <!--forced-->
+
+    <color name="textBlue">#124CFF</color>
+    <color name="textPurple">#9D00FF</color>
+    <color name="textRed">#FF1F2A</color>
+    <color name="textYellow">#FFB802</color>
+    <color name="textGreen">#0EA502</color>
+
+    <color name="textDark" tools:ignore="UnusedResources">#464646</color>
+    <color name="textMedium">#7c7c7c</color>
+    <color name="textLight" tools:ignore="UnusedResources">#b6b6b6</color>
+    <color name="textWhite" tools:ignore="UnusedResources">#ffffff</color>
+
+    <color name="allianceRed">#fa2d2d</color>
+    <color name="allianceBlue">#FF3366FF</color>
+
+    <color name="stillGreen">#006e05</color>
+
 </resources>
