--- a/Team930Scouting/WEARs/src/main/res/layout/activity_post_match.xml
+++ b/Team930Scouting/WEARs/src/main/res/layout/activity_post_match.xml
@@ -50,8 +50,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:ceil="5"
-            app:ceil_name="5 (Super Gud)"
-            app:floor_name="1 (Mega Boujee)"
+            app:ceil_name="5 (Very Accurate)"
+            app:floor_name="1 (Very Bad)"
             app:label="Passing Effectiveness"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
