--- a/Team930Scouting/WEARs/src/main/res/layout/activity_pre_match.xml
+++ b/Team930Scouting/WEARs/src/main/res/layout/activity_pre_match.xml
@@ -5,19 +5,16 @@
     android:layout_height="match_parent"
     android:screenOrientation="portrait">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="0dp"
+
+    <org.team930.bears.wears.LabelView
+        android:id="@+id/pScouterPos"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginEnd="80dp"
-        android:adjustViewBounds="true"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toTopOf="@+id/teamNum"
+        app:center="true"
+        app:label=""
+        app:layout_constraintBottom_toTopOf="@+id/pScouter"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/team_logo_glitch" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <org.team930.bears.wears.TextboxView
         android:id="@+id/pScouter"
@@ -27,29 +24,7 @@
         app:label_location="none"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/teamMapView" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/teamMapView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:padding="5dp"
-        app:layout_constraintBottom_toTopOf="@id/teamNum"
-        android:background="@drawable/rounded_corners_chunk_material">
-
-        <ImageView
-            android:id="@+id/map"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:scaleType="fitXY"
-            android:adjustViewBounds="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/teamMapView" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintBottom_toTopOf="@+id/teamNum" />
 
     <org.team930.bears.wears.TextboxView
         android:id="@+id/teamNum"
@@ -106,7 +81,8 @@
             android:src="@drawable/starting_pos"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/scouterMapView" />
+            app:layout_constraintTop_toTopOf="@id/scouterMapView"
+            tools:ignore="ContentDescription" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
